@@ -46,8 +46,7 @@ public class StatisticsService {
                           .build()),
               () ->
                   LogService.logStatisticsEventWarning(
-                      String.format(
-                          "Empty statistics event message payload for type %s received",
+                      "Empty statistics event message payload for type %s received".formatted(
                           statisticsEvent.getClass().getSimpleName())));
     }
   }
